Kubernetes/aline-account-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-account-microservice
  namespace: microservices-system  # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-account-microservice
  template:
    metadata:
      labels:
        app: aline-account-microservice
    spec:
      containers:
      - name: aline-account-microservice
        image: 1abdulrehman/microservicesproject:account-service
        ports:
        - containerPort: 8074
