Kubernetes/aline-admin-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-admin-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-admin-portal
  template:
    metadata:
      labels:
        app: aline-admin-portal
    spec:
      containers:
      - name: aline-admin-portal
        image: direstbounty/capstone:aline-admin-portal-latest
        ports:
        - containerPort: 3007
