Kubernetes/aline-bank-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-bank-microservice
  namespace: microservices-system  # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-bank-microservice
  template:
    metadata:
      labels:
        app: aline-bank-microservice
    spec:
      containers:
      - name: aline-bank-microservice
        image: direstbounty/capstone:bank-service
        ports:
        - containerPort: 8073
