Kubernetes/aline-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-gateway
  namespace: microservices-system  # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-gateway
  template:
    metadata:
      labels:
        app: aline-gateway
    spec:
      containers:
      - name: aline-gateway
        image: 1abdulrehman/microservicesproject:api-gateway3
        ports:
        - containerPort: 8080
