Kubernetes/aline-landing-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-portal
  template:
    metadata:
      labels:
        app: landing-portal
    spec:
      containers:
      - name: landing-portal
        image: direstbounty/capstone:aline-landing-portal
        ports:
        - containerPort: 3000
