Kubernetes/aline-transaction-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-transaction-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-transaction-microservice
  template:
    metadata:
      labels:
        app: aline-transaction-microservice
    spec:
      containers:
      - name: aline-transaction-microservice
        image: direstbounty/capstone:transaction-service
        ports:
        - containerPort: 8072
