Kubernetes/aline-underwriter-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-underwriter-microservice
  namespace: microservices-system  # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-underwriter-microservice
  template:
    metadata:
      labels:
        app: aline-underwriter-microservice
    spec:
      containers:
      - name: aline-underwriter-microservice
        image: direstbounty/underwriter-microservice:latest
        ports:
        - containerPort: 8071
