Kubernetes/aline-user-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-user-microservice
  namespace: microservices-system  # Specify the namespace here
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-user-microservice
  template:
    metadata:
      labels:
        app: aline-user-microservice
    spec:
      containers:
      - name: aline-user-microservice
        image: direstbounty/capstone:user-service
        ports:
        - containerPort: 8070
