Kubernetes/aline-account-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: microservices-system  # Specify the namespace here

spec:
  type: ClusterIP 
  ports:
  - port: 8074
    targetPort: 8074
  selector:
    app: aline-account-microservice
