Kubernetes/aline-admin-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aline-admin-portal
spec:
  type: ClusterIP
  ports:
  - port: 3007
    targetPort: 3007
  selector:
    app: aline-admin-portal
