Kubernetes/aline-bank-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-service
  namespace: microservices-system  # Specify the namespace here
spec:
  type: ClusterIP
  ports:
  - port: 8073
    targetPort: 8073
  selector:
    app: aline-bank-microservice
