Kubernetes/aline-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aline-gateway-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: aline-gateway
