Kubernetes/aline-landing-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-portal
spec:
  type: NodePort  
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31000 
  selector:
    app: landing-portal
