Kubernetes/aline-transaction-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aline-transaction-microservice
spec:
  type: ClusterIP
  selector:
    app: aline-transaction-microservice
  ports:
    - port: 8072
      targetPort: 8072
