Kubernetes/aline-underwriter-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aline-underwriter-microservice
spec:
  type: ClusterIP
  ports:
  - port: 8071
    targetPort: 8071
  selector:
    app: aline-underwriter-microservice
