Kubernetes/aline-user-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: microservices-system  # Specify the namespace here
spec:
  type: ClusterIP
  ports:
  - port: 8070
    targetPort: 8070
  selector:
    app: aline-user-microservice
