Kubernetes/member-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-dashboard
spec:
  type: ClusterIP
  selector:
    app: member-dashboard
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
