Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: front-end
spec: 
  rules: 
    - host: localhost
      http: 
        paths: 
          - path: /
            pathType: Exact
            backend: 
              service: 
                name: landing-portal
                port: 
                  number: 3000
